opam-version: "2.0"
name: "ocaml-ps"
version: "0.1"
maintainer: "Sangwoo Joh <work.sangwoo.joh@gmail.com>"
authors: "Sangwoo Joh"
homepage: "https://github.com/sangwoo-joh/ocaml-ps"
bug-reports: "https://github.com/sangwoo-joh/ocaml-ps/issues"
dev-repo: "git+https://github.com/sangwoo-joh/ocaml-ps.git"
depends: [
  "ocaml" {= "4.11.1"}
  "dune" {>= "2.0.0"}
  "ocamlformat"
  "tuareg"
  "merlin"
  "utop"
]
